_attachments/style/database.css
/* ... */
/* Widget : footer */
footer.navbar {
    margin-bottom:0;
}

/* Widget : header (#account-menu) */
.user-role {
    font-size: 0.6em;
}

/* Widget : quickSearch (Quick Search) */
#quick-search-container .btn-toolbar, #quick-search {
    margin: 0;
}
#quicksearch-input-field {
    width: 160px;
}
#quicksearch-structure-selector {
    width: 150px;
}
#quicksearch-module-selector {
    width: 150px;
}

ul.selections > li > .view-selection-cmd {
    padding-right: 30px;
    clear: none;
}
ul.selections > li > .delete-selection-cmd {
    padding-right: 8px;
}
ul.selections > li > .delete-selection-cmd:hover {
    background: none;
}


/* Widget : dbHome (Database overview) */
#db-home {
    margin-left: 40px;
    padding-top: 10px;
}

#db-home h3 {
    font-size: 1.1em;
    line-height: 1.1em;
    margin-bottom: 10px;
}

#wiki, #models-catalog {
    width: 700px;
    margin-right: 50px;
}

#models-catalog p.alert {
    width: 670px;
}
#models-catalog .new-model-cmd {
    margin-top: 5px;
}#models-catalog table.available-models {
    width: 715px;
}

/* Widget : dbHome (Wiki) */
.editable {
    position: relative;
    margin: 0.2em 0 2em 0.2em;
}
.editable:after {
    content:"Click to edit content";
    position: absolute;
    top: 1.8em;
    display: block;
    font-size: 0.8em;
    line-height: 0.8em;
    margin: 0 0.8em;
    padding: 0.2em;
    font-style: italic;
    color: #666;
    background-color: white;
}
.editable *[contenteditable="true"] {
    padding: 10px 5px;
    border: #333 1px dotted;
    border-radius: 5px;
    margin: 0;
    max-width: 50em;
}
.editable *[contenteditable="true"]:focus {
    background-color: #FCF8E3;
}

/* Widget : dbHome (Last changes) */
#db-last-changes {
    width: 700px;
    clear: both;
    margin: 0 0.2em 2em;
}
#db-last-changes table {
    width: 710px;
    table-layout: fixed;
}
#db-last-changes table tbody {
    display: block;
    overflow-y: auto;
    max-height: 350px;
    width: 710px;
}
#db-last-changes table thead tr {
    position: relative;
    display: block;
    background-color: #F5F5F5;
    border-bottom:1px solid #DDD;
    width: 710px;
}
#db-last-changes table td, #db-last-changes table th {
    padding: 5px;
    margin: 0;
    width: 85px;
}
#db-last-changes table td:first-child, #db-last-changes table th:first-child {
    width: 350px;
}
#db-last-changes table td:nth-child(3), #db-last-changes table th:nth-child(3) {
    width: 145px;
}
#db-last-changes table td:last-child, #db-last-changes table th:last-child {
    width: 73px;
}

/* Widget : #db-details-container */
#db-details-container {
    margin-left: 0;
}

/* Div for missing-references */
#missing-references {
    margin: 0 0.2em 2em;
}
#missing-references table {
    width: 710px;
    table-layout: fixed;
}
#missing-references table tbody {
    display: block;
    overflow-y: auto;
    max-height: 350px;
    width: 710px;
}
#missing-references table thead tr {
    position: relative;
    display: block;
    background-color: #F5F5F5;
    border-bottom:1px solid #DDD;
    width: 710px;
}
#missing-references table td, #missing-references table th {
    padding: 5px;
    margin: 0;
    width: 165px;
}
#missing-references table td:first-child, #missing-references table th:first-child {
    width: 265px;
}
#missing-references table td:nth-child(2), #missing-references table th:nth-child(2) {
    width: 345px;
}
#missing-references table td:last-child, #missing-references table th:last-child {
    width: 53px;
}

/* Widget : #db-nav-container */
.nav > li.disabled > a.models-list {
    color: black;
}
.models-toolbar {
    margin: 0 10px;
}
.model-toolbar {
  margin: 0;
  margin-left: 2px;
}
.model-toolbar .btn-group {
  padding-top: 5px;
}
.model-toolbar .btn {
  padding-top: 2px 8px;
}

/* Widget : #model-menu (Model menu) */
.model-menu-container.affix[data-spy="affix"] {
    top: 45px;
    z-index: 1;
    max-width: 14.8%;
}
#model-menu {
    resize: horizontal;
    overflow: hidden;
}
#model-menu .accordion-inner .nav-list {
    resize: none;
    overflow-x: auto;
}
.icon-chevron-right {
    float: right;
    margin-right: -6px;
    margin-top: 2px;
    opacity: 0.25;
}
.model-menu {
    margin-top: 5px;
    background-color: white;
}
.nav-list li, .dropdown-menu li {
  cursor: pointer;
}
.model-menu .nav-list {
    padding-left: 0;
}
.model-menu .nav-list li a {
    margin-left: 0;
}
#structure-accordion-group .accordion-inner, #modules-accordion-group .accordion-inner,
  #views-accordion-group .accordion-inner, #queries-accordion-group .accordion-inner {
    padding: 5px 2px;
}
.nav-title {
  margin: 0;
  font-size: 1.1em;
}
.nav-title i {
    width: 20px;
}

.sidebar-nav {
    padding: 9px 0;
}

.model-menu-stats {
    border: 1px solid #E5E5E5;
    border-radius: 4px 4px 4px 4px;
    -webkit-border-radius: 4px 4px 4px 4px;
    -moz-border-radius: 4px 4px 4px 4px;
    color: grey;
    padding: 4px 4px 4px 10px;
}

/* Widget : tree */
#root.treenode {
    margin-top: 10px;
    border-left: none;
}

ul.treenode {
    border-left: 1px dotted Gainsboro;
    margin-left: 8px;
    padding-left: 10px;
}

.treenode .selected {
    background-color: #DFF0D8;
}

.treenode .ref {
    list-style-type: none;
    padding-left: 3px;
    margin-left: 30px;
    max-height: 150px;
    width: 450px;
    overflow-y: scroll;
    border: solid #d0d0d0 1px;
    border-radius: 3px;
}

.expand-all-cmd, .collapse-all-cmd {
    width: 30px;
}

.tree-search-input {
    width: 140px;
}

.tree-action {
    display: inline-block;
    background: none repeat scroll 0 0 transparent;
    border: 0 none;
    cursor: pointer;
    padding: 0;
    color: #000;
    font-size: 15px;
    font-weight: bold;
    line-height: 20px;
    opacity: 0.2;
    text-shadow: 0 1px 0 #FFF;
    text-decoration: none;
    width: 20px;
}
.tree-action:hover, .tree-action:focus {
    color: #000;
    cursor: pointer;
    opacity: 0.4;
    text-decoration: none;
}
/* ... */

